# ORACULO_IA

./: .gitignore  app.py  loaders.py  pyproject.toml  requeriments.txt
