[tool.poetry]
name = "rudy-ia"
version = "0.1.0"
description = ""
authors = ["Victor Ribeiro <victorcesargomesribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
youtube-transcript-api = "^0.6.3"
streamlit = "^1.41.1"
langchain = "^0.3.11"
langchain-openai = "^0.2.12"
langchain-groq = "^0.2.1"
langchain-community = "^0.3.11"
bs4 = "^0.0.2"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
